season16/aws_security_group/main.tf
data "aws_vpc" "default" {
  default = true
}

# Security Group
resource "aws_security_group" "botlane-sg" {
  name        = "botlane"
  description = "No junglers allowed before lvl 6"
  vpc_id      = data.aws_vpc.default.id

  ingress {
    description = "Allow HTTP"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description = "Allow SSH"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
